third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/mut_ref_downgrade.exp
processed 2 tasks

task 0 'publish'. lines 1-24:
Error: compilation errors:
 bug: bytecode verification failed with unexpected status code `CALL_TYPE_MISMATCH_ERROR`. This is a compiler bug, consider reporting it.
Error message: none
   ┌─ TEMPFILE:14:9
   │
14 │         assn<||u64 has drop>(&mut b, a);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



task 1 'run'. lines 26-26:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
